<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/option1"
        android:id="@+id/option1"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_home_black_18dp"/>
    <item
        android:title="@string/option2"
        android:id="@+id/option2"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_home_black_18dp"/>
    <item
        android:title="@string/option3"
        android:id="@+id/option3"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_chrome_reader_mode_black_18dp"/>
    <item
        android:title="@string/option4"
        android:id="@+id/option4"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_account_circle_black_18dp"/>
</menu>